Change delete user link on edit user modal to a link to make it less important, fix bugs wrt the delete user modal sometimes appearing behind the edit modal.

--- a/premium/web-frontend/modules/baserow_premium/assets/scss/components/user_admin.scss
+++ b/premium/web-frontend/modules/baserow_premium/assets/scss/components/user_admin.scss
@@ -128,3 +128,8 @@
 .user-admin-delete__strong {
   word-break: break-word;
 }
+
+.user-admin-edit__delete {
+  color: $color-error-500;
+  font-size: 14px;
+}
